<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/videoGamesListFragment"
        android:icon="@drawable/ic_nav_catalog"
        android:title="@string/nav_videojuegos" />

    <item
        android:id="@+id/galleryFragment"
        android:icon="@drawable/ic_nav_ranking"
        android:title="@string/nav_ranking" />

    <item
        android:id="@+id/recommenderFragment"
        android:icon="@drawable/ic_nav_recommender"
        android:title="@string/nav_recomendador" />

    <item
        android:id="@+id/favoritesFragment"
        android:icon="@drawable/ic_nav_favorites"
        android:title="@string/nav_favoritos" />

    <item
        android:id="@+id/friendsFragment"
        android:icon="@drawable/ic_nav_friends"
        android:title="@string/nav_amigos" />

</menu>
