<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center"
    android:background="@drawable/bg_screen_gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crear_cuenta"
        style="@style/Widget.App.TextView.ScreenTitle"
        android:layout_marginBottom="30dp"
        />

    <EditText
        android:id="@+id/fullNameInput"
        style="@style/Widget.App.EditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/nombre_completo"
        android:inputType="text"
        android:layout_marginBottom="15dp" />

    <EditText
        android:id="@+id/emailInput"
        style="@style/Widget.App.EditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:layout_marginBottom="15dp" />

    <EditText
        android:id="@+id/passwordInput"
        style="@style/Widget.App.EditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        android:layout_marginBottom="15dp" />

    <EditText
        android:id="@+id/confirmPasswordInput"
        style="@style/Widget.App.EditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/confirmar_contrasena"
        android:inputType="textPassword"
        android:layout_marginBottom="30dp" />

    <Button
        android:id="@+id/registerButton"
        style="@style/Widget.App.Button.Primary"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/registrarse"
        android:textSize="16sp"
        android:layout_marginBottom="20dp" />

    <TextView
        android:id="@+id/loginLink"
        style="@style/Widget.App.LinkText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ya_tienes_cuenta"
        android:textSize="14sp"
        android:clickable="true"
        android:focusable="true" />

</LinearLayout>
